# attr-eomt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml  release.yml  tests.yml
configs/: coco.yaml
eomt/: __init__.py  api.py  aux_cls.py  box_loss.py  compress.py  config.py  device.py  ema.py  loss.py  model.py  plotting.py  postprocess.py  preprocess.py  serialization.py  visualize.py
eomt/data/: __init__.py  coco.py  config.py  download.py  transforms.py
eomt/engine/: __init__.py  predict.py  train.py  validate.py
sample_data/: README.md  data.yaml
sample_data/annotations/: instances_train.json  instances_val.json
scripts/: convert_parts_laterality.py  infer_sample.sh  info.py  predict.py  push_to_hub.py  train.py  train_all_coco.sh  train_detect_coco.sh  train_parts_large.sh  val.py  val_coco.sh  val_parts_large.sh
site/: index.html
src/eomt/: __init__.py  aux_cls.py  cli.py  config.py  ema.py  model.py  postprocess.py  preprocess.py  serialization.py  visualize.py
src/eomt/data/: __init__.py  coco.py  transforms.py
src/eomt/engine/: __init__.py  predict.py  train.py  validate.py
src/eomt/native/: __init__.py  loss.py  model.py
tests/: test_api.py  test_compress.py  test_native_parity.py  test_parity.py  test_smoke.py  test_sweep.py
tools/attr_tagger/: README.md  tag.py
